--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Campo Minato Boolean</title>
 </head>
 <body>
 
@@ -21,9 +21,11 @@
              <button id="play_button">PLAY</button>
             </div>
          </header>
-
+         <!-- griglia di gioco -->
          <main>
-
+            <div class="grid">
+                <div class="square"></div>
+            </div>
          </main>
 
          <footer>
