add num,add clicked true

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
          </header>
          <!-- griglia di gioco -->
          <main>
-            <div class="grid">
-                <div class="square"></div>
+            <div class="grid_container hidden">
+                <div class="grid "></div>
             </div>
+            
          </main>
 
          <footer>
