add select,add clean container at click on the button

--- a/index.html
+++ b/index.html
@@ -17,13 +17,20 @@
                 <img src="img/mobile-logo.png" alt="logo">
                 <h1>Campo Minato</h1>
             </div>
-            <!-- pulsanti -->
-             <button id="play_button">PLAY</button>
+            <!-- seelect con le difficoltà -->
+            <div>
+                <select name="" id="levels">
+                    <option value="Easy">Easy</option>
+                    <option value="Medium">Medium</option>
+                    <option value="Hard">Hard</option>
+                </select>
+                <!-- play -->
+                <button id="play_button">PLAY</button>
             </div>
          </header>
          <!-- griglia di gioco -->
          <main>
-            <div class="grid_container hidden">
+            <div id='grid_container' class=" hidden">
                 <div class="grid "></div>
             </div>
             
